version/0.19/_sources/api/solver/_autosummary/settings/function_of.rst.txt
:orphan:

.. _function_of:

function_of
===========

.. autoclass:: ansys.fluent.core.solver.settings_241.function_of.function_of
    :show-inheritance:

.. rubric:: Included in:

==============================================================================   =======================================

Parent                                                                                                           Summary

==============================================================================   =======================================
:ref:`relative_viscosity <relative_viscosity>`                                                       Relative Viscosity.

:ref:`capillary_pressure <capillary_pressure_1>`                                                     Capillary Pressure.

:ref:`pressure_jump <pressure_jump>`                                                                      Pressure Jump.

:ref:`loss_coefficient <loss_coefficient>`                                                             Loss Coefficient.

:ref:`hc <hc>`                                                                                Heat-Transfer-Coefficient.

:ref:`outlet_zone <outlet_zone>`                                                                            Outlet Zone.

:ref:`transfer_coefficient <transfer_coefficient>`                                            Heat-Transfer-Coefficient.

:ref:`dpm_bc_norm_coeff <dpm_bc_norm_coeff>`                                                                    Normal .

:ref:`dpm_bc_tang_coeff <dpm_bc_tang_coeff>`                                                                    Tangent.

:ref:`dpm_bc_frictn_coeff <dpm_bc_frictn_coeff>`                                                   Friction Coefficient.

:ref:`generic_impact_angle_function <generic_impact_angle_function>`                      Generic Impact Angle Function.

:ref:`generic_diameter_function <generic_diameter_function>`                                  Generic Diameter Function.

:ref:`generic_velocity_exponent_function <generic_velocity_exponent_function>`       Generic Velocity Exponent Function.

==============================================================================   =======================================

