version/0.23/_sources/api/solver/_autosummary/settings/function_of.rst.txt
:orphan:

.. _function_of:

function_of
===========

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.function_of.function_of
    :show-inheritance:

.. rubric:: Included in:

==============================================================================   ============================================================

Parent                                                                                                                                Summary

==============================================================================   ============================================================
:ref:`piecewise_linear <piecewise_linear>`                                            Specify data-points for piecewise linear interpolation.

:ref:`polynomial <polynomial>`                                                             Specify coefficients for interpolation polynomial.

:ref:`piecewise_linear <piecewise_linear_2>`                                         Specify ranges and values for piecewise-linear property.

:ref:`piecewise_polynomial <piecewise_polynomial>`                                                             Piecewise polynomial settings.

:ref:`polynomial <polynomial_2>`                                                                                         Polynomial settings.

:ref:`nasa_9_piecewise_polynomial <nasa_9_piecewise_polynomial>`                                               Piecewise polynomial settings.

:ref:`relative_viscosity <relative_viscosity>`                                                                            Relative Viscosity.

:ref:`capillary_pressure <capillary_pressure_1>`                                                                          Capillary Pressure.

:ref:`pressure_jump <pressure_jump>`                                                                                           Pressure Jump.

:ref:`loss_coefficient <loss_coefficient>`                                                                                  Loss Coefficient.

:ref:`hc <hc>`                                                                                                     Heat-Transfer-Coefficient.

:ref:`outlet_zone <outlet_zone>`                                                                                                 Outlet Zone.

:ref:`transfer_coefficient <transfer_coefficient>`                                                                 Heat-Transfer-Coefficient.

:ref:`normal_coefficient <normal_coefficient>`                                                     Set the normal coefficient of restitution.

:ref:`tangential_coefficient <tangential_coefficient>`                                         Set the tangential coefficient of restitution.

:ref:`dpm_bc_frictn_coeff <dpm_bc_frictn_coeff>`                                                                        Friction Coefficient.

:ref:`generic_impact_angle_function <generic_impact_angle_function>`                                           Generic Impact Angle Function.

:ref:`generic_diameter_function <generic_diameter_function>`                                                       Generic Diameter Function.

:ref:`generic_velocity_exponent_function <generic_velocity_exponent_function>`                            Generic Velocity Exponent Function.

==============================================================================   ============================================================

